audacity_compile_error_txt/audacity-compile-error.txt
mv -f .deps/audacity-AboutDialog.Tpo .deps/audacity-AboutDialog.Po                                                                                                                                                                                                                  [23/9565]
g++ -DHAVE_CONFIG_H -I.  -D__STDC_CONSTANT_MACROS -DLIBDIR=\"/usr/lib64\"   -I../lib-src/portaudio-v19/include   -I../lib-src/lib-widget-extra -I/usr/lib64/wx/include/gtk2-unicode-release-2.8 -I/usr/include/wx-2.8 -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES -D__WXGTK__ -pthread       -I/usr
/include -I/usr/include     -I../lib-src/libnyquist -I/usr/include/soundtouch   -I../lib-src/libsoxr/src   -I../lib-src/lv2/include -I../lib-src/portsmf  -I../lib-src/sbsms/include   -Wall -pthread -I/usr/include/gtk-2.0 -I/usr/lib64/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/inclu
de/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/pango-1.0 -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/harfbuzz   -Wno-unused-local-typedefs -I../lib-src/portmi
xer/include -O2 -fPIC  -Wall -I../lib-src/FileDialog                  -MT audacity-AudacityLogger.o -MD -MP -MF .deps/audacity-AudacityLogger.Tpo -c -o audacity-AudacityLogger.o `test -f 'AudacityLogger.cpp' || echo './'`AudacityLogger.cpp
mv -f .deps/audacity-AColor.Tpo .deps/audacity-AColor.Po
g++ -DHAVE_CONFIG_H -I.  -D__STDC_CONSTANT_MACROS -DLIBDIR=\"/usr/lib64\"   -I../lib-src/portaudio-v19/include   -I../lib-src/lib-widget-extra -I/usr/lib64/wx/include/gtk2-unicode-release-2.8 -I/usr/include/wx-2.8 -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES -D__WXGTK__ -pthread       -I/usr
/include -I/usr/include     -I../lib-src/libnyquist -I/usr/include/soundtouch   -I../lib-src/libsoxr/src   -I../lib-src/lv2/include -I../lib-src/portsmf  -I../lib-src/sbsms/include   -Wall -pthread -I/usr/include/gtk-2.0 -I/usr/lib64/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/inclu
de/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/pango-1.0 -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/harfbuzz   -Wno-unused-local-typedefs -I../lib-src/portmi
xer/include -O2 -fPIC  -Wall -I../lib-src/FileDialog                  -MT audacity-AudioIO.o -MD -MP -MF .deps/audacity-AudioIO.Tpo -c -o audacity-AudioIO.o `test -f 'AudioIO.cpp' || echo './'`AudioIO.cpp
mv -f .deps/audacity-AudacityLogger.Tpo .deps/audacity-AudacityLogger.Po
g++ -DHAVE_CONFIG_H -I.  -D__STDC_CONSTANT_MACROS -DLIBDIR=\"/usr/lib64\"   -I../lib-src/portaudio-v19/include   -I../lib-src/lib-widget-extra -I/usr/lib64/wx/include/gtk2-unicode-release-2.8 -I/usr/include/wx-2.8 -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES -D__WXGTK__ -pthread       -I/usr
/include -I/usr/include     -I../lib-src/libnyquist -I/usr/include/soundtouch   -I../lib-src/libsoxr/src   -I../lib-src/lv2/include -I../lib-src/portsmf  -I../lib-src/sbsms/include   -Wall -pthread -I/usr/include/gtk-2.0 -I/usr/lib64/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/inclu
de/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/pango-1.0 -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng14 -I/usr/include/libdrm -I/usr/include/harfbuzz   -Wno-unused-local-typedefs -I../lib-src/portmi
xer/include -O2 -fPIC  -Wall -I../lib-src/FileDialog                  -MT audacity-AutoRecovery.o -MD -MP -MF .deps/audacity-AutoRecovery.Tpo -c -o audacity-AutoRecovery.o `test -f 'AutoRecovery.cpp' || echo './'`AutoRecovery.cpp
In file included from AudacityApp.cpp:73:0:
FFmpeg.h: In function ‘AVOutputFormat* av_oformat_next(AVOutputFormat*)’:
FFmpeg.h:691:25: error: declaration of C function ‘AVOutputFormat* av_oformat_next(AVOutputFormat*)’ conflicts with
       (AVOutputFormat *f),
                         ^
FFmpeg.h:485:18: note: in definition of macro ‘FFMPEG_FUNCTION_WITH_RETURN’
       inline r n a                                                      \
                  ^
In file included from FFmpeg.h:44:0,
                 from AudacityApp.cpp:73:
/usr/include/libavformat/avformat.h:1857:17: error: previous declaration ‘AVOutputFormat* av_oformat_next(const AVOutputFormat*)’ here
 AVOutputFormat *av_oformat_next(const AVOutputFormat *f);
                 ^
In file included from AudacityApp.cpp:73:0:
FFmpeg.h: In function ‘int av_fifo_size(AVFifoBuffer*)’:
FFmpeg.h:758:23: error: declaration of C function ‘int av_fifo_size(AVFifoBuffer*)’ conflicts with
       (AVFifoBuffer *f),
                       ^
FFmpeg.h:485:18: note: in definition of macro ‘FFMPEG_FUNCTION_WITH_RETURN’
       inline r n a                                                      \
                  ^
In file included from FFmpeg.h:45:0,
                 from AudacityApp.cpp:73:
/usr/include/libavutil/fifo.h:76:5: error: previous declaration ‘int av_fifo_size(const AVFifoBuffer*)’ here
 int av_fifo_size(const AVFifoBuffer *f);
     ^
In file included from AudacityApp.cpp:73:0:
FFmpeg.h: In function ‘AVDictionaryEntry* av_dict_get(AVDictionary*, const char*, const AVDictionaryEntry*, int)’:
FFmpeg.h:804:82: error: declaration of C function ‘AVDictionaryEntry* av_dict_get(AVDictionary*, const char*, const AVDictionaryEntry*, int)’ conflicts with
       (AVDictionary *m, const char *key, const AVDictionaryEntry *prev, int flags),
                                                                                  ^
FFmpeg.h:485:18: note: in definition of macro ‘FFMPEG_FUNCTION_WITH_RETURN’
       inline r n a                                                      \
                  ^
In file included from /usr/include/libavcodec/avcodec.h:37:0,
                 from FFmpeg.h:43,
                 from AudacityApp.cpp:73:
/usr/include/libavutil/dict.h:104:20: error: previous declaration ‘AVDictionaryEntry* av_dict_get(const AVDictionary*, const char*, const AVDictionaryEntry*, int)’ here
 AVDictionaryEntry *av_dict_get(const AVDictionary *m, const char *key,
                    ^
AudioIO.cpp: In member function ‘void AudioIO::StopStream()’:
AudioIO.cpp:1782:27: warning: variable ‘bResult’ set but not used [-Wunused-but-set-variable]
                      bool bResult = true;
                           ^
AudacityApp.cpp: At global scope:
AudacityApp.cpp:213:13: warning: ‘void wxOnAssert(const wxChar*, int, const wxChar*)’ defined but not used [-Wunused-function]
 static void wxOnAssert(const wxChar *fileName, int lineNumber, const wxChar *msg)
             ^
make[2]: *** [audacity-AudacityApp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
mv -f .deps/audacity-AutoRecovery.Tpo .deps/audacity-AutoRecovery.Po
mv -f .deps/audacity-AudioIO.Tpo .deps/audacity-AudioIO.Po
make[2]: Leaving directory `/tmp/SBo/audacity-src-2.0.6/src'
make[1]: *** [all] Error 2
make[1]: Leaving directory `/tmp/SBo/audacity-src-2.0.6/src'
make: *** [all-recursive] Error 1

